--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -147,8 +147,26 @@ section:not(.index-section) {
   }
 }
 
+// @keyframes loading-spinner {
+//   0% {
+//     display: block;
+//     opacity: 1;
+//   }
+//   90% {
+//     opacity: 1;
+//   }
+//   100% {
+//     opacity: 0;
+//     display: none;
+//   }
+// }
+
 @keyframes loading-spinner {
   0% {
+    visibility: hidden;
+  }
+  1%{
+    visibility: visible;
     opacity: 1;
   }
   90% {
@@ -156,6 +174,6 @@ section:not(.index-section) {
   }
   100% {
     opacity: 0;
-    display: none;
+    visibility: hidden
   }
 }
